# new-modules

./: CMakeLists.txt  LICENSE.md  README.md  SlicerDMRISandbox.s4ext
AverageVolumes/: avg_selected_images.py
FiberEndPointFromLabelMap/: CMakeLists.txt  FiberEndPointFromLabelMap.cxx  FiberEndPointFromLabelMap.xml
FiberEndPointFromLabelMap-build/: AdditionalLauncherSettings-configure.cmake  AdditionalLauncherSettings.ini  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  FiberEndPointFromLabelMap-test-command-args.cmake  FiberEndPointFromLabelMap-upload-command-args.cmake  FiberEndPointFromLabelMapCLP.h  Makefile  cmake_install.cmake  fiberendpointfromlabelmaplib_export.h
FiberEndPointFromLabelMap-build/Testing/: CTestTestfile.cmake  CompareTxts  FiberEndPointFromLabelMapTest  Makefile  cmake_install.cmake
FiberEndPointFromLabelMap-build/Testing/Temporary/: CTestCostData.txt
FiberEndPointFromLabelMap-build/lib/Slicer-4.7/cli-modules/: FiberEndPointFromLabelMap
FiberEndPointFromLabelMap/Data/Baseline/: BaselineResult.txt
FiberEndPointFromLabelMap/Data/Input/: fiber_labels_0_8_1027.vtk  fiber_labels_0_8_1027.vtp  label_map.nrrd
FiberEndPointFromLabelMap/Testing/: CMakeLists.txt  CompareTxts.cxx
FiberTractClean/: CMakeLists.txt  FiberTractClean.cxx
FiberTractClean-build/: AdditionalLauncherSettings-configure.cmake  AdditionalLauncherSettings.ini  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  FiberTractClean-test-command-args.cmake  FiberTractClean-upload-command-args.cmake  FiberTractCleanCLP.h  Makefile  cmake_install.cmake  fibertractcleanlib_export.h
FiberTractClean-build/Testing/: CTestTestfile.cmake  CompareTensorMeasureClean  FiberTractCleanTest  Makefile  cmake_install.cmake
FiberTractClean-build/Testing/Temporary/: CTestCostData.txt
FiberTractClean-build/lib/Slicer-4.7/cli-modules/: FiberTractClean  FiberTractClean.xml
FiberTractClean/Data/Baseline/: baseline_kept_fibers.vtk  baseline_removed_fibers.vtk
FiberTractClean/Data/Input/: input_partial.vtk  input_partial.vtp  mask.nrrd
FiberTractClean/Testing/: CMakeLists.txt
HardenTransform/: HardenTransform.py
